SERVER-63003: Fix the name hiding issue in the Resharding Coordinator Service